# community-projects

./: LICENSE.md  PROJECTS.yml  README.md  pr_description.md
apps/AgentAuditor/: .env.example  .gitignore  README.md  SessionQueueV2ABI.json  SessionV2ABI.json  setup.bat  setup.sh  test_setup.py
apps/Cortensor-AIOracle/: .env.example  .gitignore  PROJECTS.yml  README.md  RELEASE.md  STATUS.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  test-filter.js  tsconfig.json
apps/Cortensor-AnalystAI/: .gitignore  PROJECTS.yml  README.md  RELEASE.md  STATUS.md  analysis.py  get_symbols.py  main.py  requirements.txt
apps/Cortensor-EurekaAI/: .gitignore  PROJECTS.yml  README.md  RELEASE.md  STATUS.md  eslint.config.mjs  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
apps/Cortensor-EurekaBuddyBot/: PROJECTS.yml  README.md  RELEASE.md  STATUS.md  requirements.txt
apps/Cortensor-Price-Analyzer/: .gitignore  PROJECTS.yml  README.md  RELEASE.md  STATUS.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
apps/Cortensor-Research-Summarizer/: .gitignore  PROJECTS.yml  README.md  RELEASE.md  STATUS.md  package-lock.json  package.json  pnpm-lock.yaml
apps/Cortensor-Showcase-App/: .gitignore  404.html  PROJECTS.yml  RAG.html  README.md  RELEASE.md  STATUS.md  admin.html  detail.html  index.html  package.json  server.js
apps/Cortensor-XGenBot/: .gitignore  PROJECTS.yml  README.md  RELEASE.md  STATUS.md  requirements.txt
apps/Cortensor-inception/: README.md
apps/CortensorLabs/: PROJECTS.yml  README.md  RELEASE.md  STATUS.md
apps/CortensorPulse/: README.md  index.html  package-lock.json  package.json
apps/CortensorView/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json
apps/Health_Advisor/: .env  PROJECTS.yml  README.md  RELEASE.md  STATUS.md  requirements.txt
apps/chaplin/: PROJECTS.yml  RELEASE.md
apps/cortensor-ai-oracle-taas/: PROJECTS.yml  README.md  RELEASE.md  STATUS.md
apps/cortensor-chatweb-eliza/: PROJECTS.yml  README.md  RELEASE.md  STATUS.md  package.json
apps/cortensor-chatweb-eureka/: README.md  STATUS.md  tailwind.config.ts  tsconfig.json
apps/cortensor-claim-check/: .gitignore  PROJECTS.yml  README.md  RELEASE.md  STATUS.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/cortensor-governance-agent/: .gitignore  README.md  demo.py  pyproject.toml
apps/cortensor-governance-agent/examples/: demo.py  test_connection.py
apps/cortensor-governance-agent/src/cortensor_agent/: __init__.py  agent.py  client.py
apps/cortensor-governance-agent/tests/: test_mcp_client.py
apps/cortensor-linktree-ai-main/: LICENSE  PROJECTS.yml  README.md  RELEASE.md  STATUS.md
apps/cortensor-recaptgbot/: LICENSE  PROJECTS.yml  (+4 more)
apps/xea/backend/: cli.py  pyproject.toml
apps/xea/backend/app/: __init__.py  aggregator.py  api.py  attest.py  config.py  cortensor_client.py  database.py  history_service.py  ingest.py  main.py  miner_client.py  models.py  replay.py  rubrics.py  schemas.py  stats.py  utils.py  versioning.py  views.py  workers.py
cortensor-mcp-gateway/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  session_log_20260119_112544.json
cortensor-mcp-gateway/docs/: SCORING_RUBRIC.md
cortensor-mcp-gateway/examples/: basic_usage.py  delegate_validate_demo.py  full_workflow_demo.py
cortensor-mcp-gateway/src/: __init__.py
cortensor-mcp-gateway/src/agent_swarm/: __init__.py  auditor.py  base.py  coordinator.py  executor.py  planner.py  validator.py
cortensor-mcp-gateway/src/cortensor_client/: __init__.py  client.py  config.py  models.py
cortensor-mcp-gateway/src/evidence/: __init__.py  bundle.py
cortensor-mcp-gateway/src/mcp_server/: __init__.py  server.py
cortensor-mcp-gateway/submission_evidence/: demo_output.txt
cortensor-mcp-gateway/tests/: conftest.py  test_client.py  test_evidence.py
(+1312 files in other folders)
