[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xea-governance-oracle"
version = "0.1.0"
description = "Verifiable governance intelligence powered by decentralized inference"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Xea Contributors"}
]
keywords = ["governance", "dao", "ai", "decentralized", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",
    "rq>=1.15.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "eth-account>=0.10.0",
    "web3>=6.11.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/your-org/xea-governance-oracle"
Documentation = "https://github.com/your-org/xea-governance-oracle/blob/main/SPEC.md"
Repository = "https://github.com/your-org/xea-governance-oracle"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["../tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
